Postulat and dates

--- a/App/app/src/main/res/layout/activity_annonces.xml
+++ b/App/app/src/main/res/layout/activity_annonces.xml
@@ -29,8 +29,10 @@
         android:id="@+id/buttonCreate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#FF4444"
+        android:background="#000000"
         android:text="Créer Annonce"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/buttonView"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,8 +42,10 @@
         android:id="@+id/buttonView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#FF4444"
+        android:background="#000000"
         android:text="Mes annonces"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/buttonProfil"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toEndOf="@+id/buttonCreate"
@@ -51,8 +55,10 @@
         android:id="@+id/buttonAnnoncesRetour"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#FF4444"
+        android:background="#000000"
         android:text="Déconnexion"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonProfil"
         app:layout_constraintTop_toTopOf="parent" />
@@ -61,8 +67,10 @@
         android:id="@+id/buttonProfil"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#FF4444"
+        android:background="#000000"
         android:text="Profil"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/buttonAnnoncesRetour"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toEndOf="@+id/buttonView"
