--- a/App/app/src/main/res/layout/activity_formulaire_offre_validate.xml
+++ b/App/app/src/main/res/layout/activity_formulaire_offre_validate.xml
@@ -57,7 +57,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/offreSujet" />
 
-            <EditText
+            <MultiAutoCompleteTextView
                 android:id="@+id/offreText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -66,8 +66,8 @@
                 android:layout_marginEnd="16dp"
                 android:ems="10"
                 android:gravity="start"
-                android:inputType="textPersonName"
                 android:hint="Saisissez les termes de votre annonce..."
+                android:inputType="textUri|textLongMessage|textAutoCorrect|textPersonName|textEmailAddress"
                 android:textAlignment="viewStart"
                 android:textColor="#5C5757"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +111,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
